src/tests/snapshots/cclv__tests__view_snapshots__message_with_tool_use.snap
---
source: src/tests/view_snapshots.rs
expression: output
---
┌Main Agent (1 entries)────────────────────────────────────────────────────────┐
││  1 Let me read that file for you.                                           │
││    🔧  Tool: Read                                                            │
││      {                                                                      │
││        "file_path": "/home/user/test.rs",                                   │
││        "limit": 100                                                         │
││      }                                                                      │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
