src/tests/snapshots/cclv__tests__view_snapshots__stats_panel_empty.snap
---
source: src/tests/view_snapshots.rs
expression: output
---
┌ Statistics: All Sessions ──────────────────────┐
│Tokens:                                         │
│  Input:  0                                     │
│  Output: 0                                     │
│  Total:  0                                     │
│                                                │
│Estimated Cost:                                 │
│  $0.00                                         │
│                                                │
│Subagents:                                      │
│  Count: 0                                      │
│                                                │
│Entries:                                        │
│  Count: 0                                      │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
└────────────────────────────────────────────────┘
