src/tests/snapshots/cclv__tests__view_snapshots__stats_panel_main_agent_filter.snap
---
source: src/tests/view_snapshots.rs
expression: output
---
┌ Statistics (Main Agent) ────────────────────────────┐
│Tokens:                                              │
│  Input:  1,150                                      │
│  Output: 500                                        │
│  Total:  1,650                                      │
│  Cache:  150                                        │
│                                                     │
│Estimated Cost:                                      │
│  $0.01                                              │
│                                                     │
│Subagents:                                           │
│  Count: 2                                           │
│                                                     │
│Entries:                                             │
│  Count: 10                                          │
│                                                     │
│                                                     │
│                                                     │
│                                                     │
│                                                     │
│                                                     │
│                                                     │
│                                                     │
│                                                     │
└─────────────────────────────────────────────────────┘
