src/tests/snapshots/cclv__tests__view_snapshots__stats_panel_with_cache_tokens.snap
---
source: src/tests/view_snapshots.rs
expression: output
---
┌ Statistics: All Sessions ──────────────────────┐
│Tokens:                                         │
│  Input:  13,500                                │
│  Output: 5,000                                 │
│  Total:  18,500                                │
│  Cache:  3,500                                 │
│                                                │
│Estimated Cost:                                 │
│  $0.03                                         │
│                                                │
│Subagents:                                      │
│  Count: 0                                      │
│                                                │
│Entries:                                        │
│  Count: 5                                      │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
└────────────────────────────────────────────────┘
