src/tests/snapshots/cclv__tests__view_snapshots__stats_panel_with_data.snap
---
source: src/tests/view_snapshots.rs
expression: output
---
┌ Statistics ────────────────────────────────────┐
│Tokens:                                         │
│  Input:  1,800                                 │
│  Output: 750                                   │
│  Total:  2,550                                 │
│  Cache:  300                                   │
│                                                │
│Estimated Cost:                                 │
│  $0.08                                         │
│                                                │
│Tool Usage:                                     │
│  Read: 5                                       │
│  Write: 3                                      │
│  Bash: 2                                       │
│                                                │
│Subagents:                                      │
│  Count: 2                                      │
│                                                │
│Entries:                                        │
│  Count: 10                                     │
│                                                │
│                                                │
│                                                │
│                                                │
└────────────────────────────────────────────────┘
