src/tests/snapshots/cclv__tests__view_snapshots__tab_bar_no_selection.snap
---
source: src/tests/view_snapshots.rs
expression: output
---
┌Conversations───────────────────────────────────┐
│ Main Agent │ agent-1 │ agent-2                 │
│                                                │
│                                                │
└────────────────────────────────────────────────┘
