src/tests/snapshots/cclv__tests__view_snapshots__tab_bar_single_tab.snap
---
source: src/tests/view_snapshots.rs
expression: output
---
┌Conversations─────────────────────────┐
│ Main Agent │ agent-abc123            │
│                                      │
│                                      │
└──────────────────────────────────────┘
