src/tests/snapshots/cclv__tests__view_snapshots__tab_bar_with_search_matches.snap
---
source: src/tests/view_snapshots.rs
expression: output
---
┌Conversations─────────────────────────────────────────────┐
│ Main │ agent-1 • │ agent-2 │ agent-3 •                   │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
