src/tests/snapshots/cclv__tests__view_snapshots__wrap_mode_global_nowrap.snap
---
source: src/tests/view_snapshots.rs
expression: output
---
┌Main (1 entries) ▶────────────────────────────────────────┐
││  1 This is a very long line that definitely exceeds the │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
