src/tests/snapshots/cclv__tests__view_snapshots__wrap_mode_global_wrap.snap
---
source: src/tests/view_snapshots.rs
expression: output
---
┌Main (1 entries)──────────────────────────────────────────┐
││  1 This is a very long line that definitely exceeds the │
││    viewport width and should wrap to multiple lines when│
││    wrap mode is enabled. The content should continue on │
││    the next line without truncation.                    │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
